# omicclaw

./: .gitignore  .readthedocs.yaml  MAINTENANCE.md  MAINTENANCE_CN.md  MANIFEST.in  OLD_README.md  OLD_README_CN.md  README.md  README_CN.md  README_EN.md  TUTORIAL.md  TUTORIAL_CN.md  __init__.py  app.py  cli.py  default.ipynb  omicverse_docs_checklist.md  package-lock.json  package.json  pyproject.toml  single_cell_analysis_standalone.html  start_server.py  test_channel_workspace_isolation.py
.github/workflows/: docs.yml
config/: mcporter.json
dev/: app.py.backup  app_refactored.py
docs/: DEPLOYMENT.md  Makefile  requirements.txt
docs/readthedocs-zh/: .readthedocs.yaml
docs/source/: _conf_common.py  _toc.yml  conf.py  conf_en.py  conf_zh.py  index.md
docs/source/_static/: custom.css  lang-switcher.js  sidebar-toggle.js
docs/source/_templates/: redirect.html
docs/source/en/: index.md
docs/source/en/archive/: index.md  old-readme.md
docs/source/en/getting-started/: index.md  installation.md  quickstart.md
docs/source/en/interfaces/: index.md  launch-modes.md  setup-auth.md  workspace.md
docs/source/en/reference/: index.md  maintenance.md  omicverse-docs-checklist.md
docs/source/zh/: index.md
docs/source/zh/archive/: index.md  old-readme.md
docs/source/zh/getting-started/: index.md  installation.md  quickstart.md
docs/source/zh/interfaces/: index.md  launch-modes.md  setup-auth.md  workspace.md
docs/source/zh/reference/: index.md  maintenance.md
gateway/: __init__.py  channel_adapter.py  channel_config_routes.py  context.py  inprocess_channel_manager.py  memory_routes.py  panel_routes.py  registry.py  routes.py  server.py
omicclaw/: __init__.py  app.py  cli.py  start_server.py
routes/: __init__.py  account.py  conversations.py  data.py  files.py  notebooks.py  skills.py
services/: agent_service.py  agent_session_service.py  kernel_service.py  llm_catalog.py  llm_provider_catalog.json  workspace_service.py
src/: pyproject.toml
src/omicverse_skills/: __init__.py
src/omicverse_skills/skills/single-annotation/: SKILL.md
src/omicverse_skills/skills/single-cellphone-db/: SKILL.md
src/omicverse_skills/skills/single-clustering/: SKILL.md
src/omicverse_skills/skills/single-preprocessing/: SKILL.md
static/css/: code-editor-dark.css  code-editor-layout.css  code-editor-refresh.css  custom-theme.css  dark-mode.css  single-cell-fixed.css  single-cell-refresh.css  workbench-views-refresh.css
static/js/: old-single-cell.js  sc-account.js  sc-agent.js  sc-core.js  sc-environment.js  sc-filesystem.js  sc-i18n.js  sc-notebook.js  sc-test-node.js  sc-test.js  sc-tools.js  sc-ui.js  sidebar-fix.js  single-cell.js
temp/: rna.csv  rna_anno.txt  rna_anno.txt.go
tests/: test_channel_config_routes.py  test_files_routes.py  test_inprocess_channel_manager.py  test_omicclaw_cli.py
utils/: __init__.py  account_session.py  file_helpers.py  memory_helpers.py  notebook_helpers.py  remote_store.py  variable_helpers.py
